# nellie

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
nellie/feature_extraction/: hierarchical.py
nellie/segmentation/: filtering.py
nellie_napari/: nellie_home.py  nellie_visualizer.py
