[project]
name = "nellie"
dynamic = ["version"]
description = "Automated organelle segmentation, tracking, and hierarchical feature extraction in 2D/3D live-cell microscopy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Austin E. Y. T. Lefebvre", email = "austin.e.lefebvre+nellie@gmail.com"},
]
classifiers = [
    "Framework :: napari",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "nd2",
    "ome-types",
    "pandas",
    "matplotlib",
    "napari[all]",
    "imagecodecs",
    "packaging",
]
urls = {Homepage = "https://github.com/aelefebv/nellie"}

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Version is derived from the latest `vX.Y.Z` git tag at build time. Used by
# the release workflow when a tag is pushed. fallback_version covers source
# checkouts without git history (e.g., a tarball without .git/).
fallback_version = "1.0.3"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nellie_napari = ["napari.yaml", "logo.png"]

[project.entry-points."napari.manifest"]
nellie = "nellie_napari:napari.yaml"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'x86_64'",
]